--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div>
+    <button id="deviceBtn">device</button>
     <button id="startBtn">start</button>
     <button id="stopBtn">stop</button>
     <button id="chatBtn">chat</button>
