--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div>
-    <button id="deviceBtn">device</button>
     <button id="startBtn">start</button>
     <button id="stopBtn">stop</button>
+    <button id="flipBtn">flip</button>
     <button id="chatBtn">chat</button>
   </div>
   <h1>LOCAL</h1>
