--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div>
     <button id="startBtn">start</button>
     <button id="stopBtn">stop</button>
-    <button id="flipBtn">flip2</button>
     <button id="chatBtn">chat</button>
+    <select id="cameraList" disabled></select>
   </div>
   <h1>LOCAL</h1>
   <video id="localVideo" autoplay muted></video>
