--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id="startBtn">start</button>
     <button id="stopBtn">stop</button>
     <button id="chatBtn">chat</button>
-    <select id="cameraList" disabled></select>
+    <select id="cameraList" hidden></select>
   </div>
   <h1>LOCAL</h1>
   <video id="localVideo" autoplay muted></video>
