--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div>
-    <button id="startBtn">start</button>
+    <button id="startBtn">start1</button>
     <button id="stopBtn">stop</button>
     <button id="chatBtn">chat</button>
     <select id="cameraList" hidden></select>
